Updates for new blog post
Updates to this demonstration class for new blog post "JDK 12: Switch Statements/Expressions in Action" on "Inspired by Actual Events" blog (http://marxsoftware.blogspot.com/).